Kubernetes/appdeployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-pod
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: app-pod
  template:
    metadata:
      labels:
        app: app-pod
    spec:
      containers:
        - name: app-pod
          image: varunsimha/myapp:latest
          resources:
            limits:
              cpu: "500m"
              memory: "128Mi"
          ports:
            - containerPort: 8000
