Kubernetes/dbdeployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-pod
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate: 
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: db-pod
  template:
    metadata:
      labels:
        app: db-pod
    spec:
      securityContext:
        fsGroup: 1001
      containers:
        - name: db-pod
          image: bitnami/mysql:latest
          resources:
            limits:
              memory: "1Gi"
              cpu: "500m"
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-storage
              mountPath: "/bitnami/mysql"
            - name: init-script-volume
              mountPath: "/docker-entrypoint-initdb.d"

      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
            claimName: my-pvc
        - name: init-script-volume
          configMap:
            name: my-config
            items:
              - key: init.sql
                path: init.sql
