Kubernetes/deploy_dbdeployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-pod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: db-pod
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: db-pod
    spec:
      securityContext:
        fsGroup: 1001
      containers:
        - name: db-pod
          image: varunsimha/dbpod:latest
          ports:
            - containerPort: 3306
          resources:
            limits:
              memory: "1Gi"
              cpu: "500m"
          volumeMounts:
            - name: mysql-storage
              mountPath: /var/lib/mysql

      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
            claimName: my-pvc
