Kubernetes/appservice.yml
apiVersion: v1
kind: Service
metadata:
  name: app-svc
spec:
  selector:
    app: app-pod
  type: LoadBalancer
  ports:
  - name: "HTTP"
    port: 80
    targetPort: 8000
